k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-jc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: test-jc
