k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: utilities
spec:
  ingressClassName: traefik
  rules:
    - host: test.lab.jcheype.com
      http:
        paths:
          - backend:
              service:
                name: test-jc
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
